--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,6 +624,242 @@
     "    exprs = [e.strip() for e in f]\n",
     "    print('Part 1: ', sum(parse_and_evaluate(e) for e in exprs))\n",
     "    print('Part 2: ', sum(parse_and_evaluate_advanced(e) for e in exprs))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 19: Monster Messages"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A cheat because it supports recursive (i.e. not-so-regular) regexes :(\n",
+    "import regex\n",
+    "\n",
+    "def compile_grammar(rules, special_cases=False):\n",
+    "    def rule_8():\n",
+    "        rule_42 = compile_rule(42)\n",
+    "        return rf'({rule_42}+)'\n",
+    "\n",
+    "    def rule_11():\n",
+    "        rule_42 = compile_rule(42)\n",
+    "        rule_31 = compile_rule(31)\n",
+    "        return rf'(?<rule_11>{rule_42}(?&rule_11)*{rule_31})'\n",
+    "\n",
+    "    @functools.lru_cache(maxsize=1024)\n",
+    "    def compile_rule(num):\n",
+    "        if special_cases and num == 8:\n",
+    "            return rule_8()\n",
+    "        elif special_cases and num == 11:\n",
+    "            return rule_11()\n",
+    "        rule = rules[num]\n",
+    "        if rule.startswith('\"'):\n",
+    "            return rule[1:-1]\n",
+    "        \n",
+    "        disj_parts = []\n",
+    "        for disj in rule.split(' | '):\n",
+    "            conj_parts = []\n",
+    "            for conj in disj.split(' '):\n",
+    "                conj_parts.append(compile_rule(int(conj)))\n",
+    "            disj_parts.append('({})'.format(''.join(conj_parts)))\n",
+    "        return '({})'.format('|'.join(disj_parts))\n",
+    "\n",
+    "    grammar = {}\n",
+    "    for num, rule in rules.items():\n",
+    "        grammar[num] = compile_rule(num)\n",
+    "    return grammar\n",
+    "\n",
+    "def parse_grammar(lines, special_cases=False):\n",
+    "    rules = {}\n",
+    "    for line in lines:\n",
+    "        if ':' not in line: break\n",
+    "        num, rule = line.strip().split(': ')\n",
+    "        rules[int(num)] = rule\n",
+    "    return compile_grammar(rules, special_cases)\n",
+    "\n",
+    "def parse_strings(lines):\n",
+    "    for line in lines:\n",
+    "        if ':' not in line:\n",
+    "            yield line.strip()\n",
+    "\n",
+    "def matches_grammar(string, grammar, rule=0):\n",
+    "    pattern = regex.compile(grammar[rule])\n",
+    "    return pattern.fullmatch(string) is not None\n",
+    "\n",
+    "def num_matching_strings(lines, special_cases=False):\n",
+    "    grammar = parse_grammar(lines, special_cases)\n",
+    "    strings = parse_strings(lines)\n",
+    "    return sum(matches_grammar(s, grammar) for s in strings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{0: '((a((((aa)|(bb))((ab)|(ba)))|(((ab)|(ba))((aa)|(bb))))b))',\n",
+       " 1: '((((aa)|(bb))((ab)|(ba)))|(((ab)|(ba))((aa)|(bb))))',\n",
+       " 2: '((aa)|(bb))',\n",
+       " 3: '((ab)|(ba))',\n",
+       " 4: 'a',\n",
+       " 5: 'b'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 299
+    }
+   ],
+   "source": [
+    "test_input = \"\"\"\n",
+    "    0: 4 1 5\n",
+    "    1: 2 3 | 3 2\n",
+    "    2: 4 4 | 5 5\n",
+    "    3: 4 5 | 5 4\n",
+    "    4: \"a\"\n",
+    "    5: \"b\"\n",
+    "\n",
+    "    ababbb\n",
+    "    bababa\n",
+    "    abbbab\n",
+    "    aaabbb\n",
+    "    aaaabbb\"\"\".strip().splitlines()\n",
+    "\n",
+    "assert num_matching_strings(test_input) == 2\n",
+    "parse_grammar(test_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{42: '((((b((a((bb)|(ab)))|(b((((a)|(b))((a)|(b)))))))|(a((b((bb)))|(a((bb)|(a((a)|(b))))))))b)|(((((((aa)|(ab))a)|(((bb))b))b)|(((((((a)|(b))a)|(bb))a))a))a))',\n",
+       " 9: '((b((a((bb)|(ab)))|(b((((a)|(b))((a)|(b)))))))|(a((b((bb)))|(a((bb)|(a((a)|(b))))))))',\n",
+       " 10: '((((((aa)|(ab))a)|(((bb))b))b)|(((((((a)|(b))a)|(bb))a))a))',\n",
+       " 1: 'a',\n",
+       " 11: '(?<rule_11>((((b((a((bb)|(ab)))|(b((((a)|(b))((a)|(b)))))))|(a((b((bb)))|(a((bb)|(a((a)|(b))))))))b)|(((((((aa)|(ab))a)|(((bb))b))b)|(((((((a)|(b))a)|(bb))a))a))a))(?&rule_11)*((b((b((a((ba)))|(b((aa)))))|(a((b((ab)|(((a)|(b))a)))|(a((ba)|(ab)))))))|(a((b((((ab)|(((a)|(b))a))b)|(((((a)|(b))a)|(bb))a)))|(a((((ba))b)|(((ba)|(bb))a)))))))',\n",
+       " 5: '((ab)|(((a)|(b))a))',\n",
+       " 19: '((ba)|(bb))',\n",
+       " 12: '((((ba))b)|(((ba)|(bb))a))',\n",
+       " 16: '((((a)|(b))a)|(bb))',\n",
+       " 31: '((b((b((a((ba)))|(b((aa)))))|(a((b((ab)|(((a)|(b))a)))|(a((ba)|(ab)))))))|(a((b((((ab)|(((a)|(b))a))b)|(((((a)|(b))a)|(bb))a)))|(a((((ba))b)|(((ba)|(bb))a))))))',\n",
+       " 6: '((bb)|(ab))',\n",
+       " 2: '((a((ba)))|(b((aa))))',\n",
+       " 0: '(((((((b((a((bb)|(ab)))|(b((((a)|(b))((a)|(b)))))))|(a((b((bb)))|(a((bb)|(a((a)|(b))))))))b)|(((((((aa)|(ab))a)|(((bb))b))b)|(((((((a)|(b))a)|(bb))a))a))a))+)(?<rule_11>((((b((a((bb)|(ab)))|(b((((a)|(b))((a)|(b)))))))|(a((b((bb)))|(a((bb)|(a((a)|(b))))))))b)|(((((((aa)|(ab))a)|(((bb))b))b)|(((((((a)|(b))a)|(bb))a))a))a))(?&rule_11)*((b((b((a((ba)))|(b((aa)))))|(a((b((ab)|(((a)|(b))a)))|(a((ba)|(ab)))))))|(a((b((((ab)|(((a)|(b))a))b)|(((((a)|(b))a)|(bb))a)))|(a((((ba))b)|(((ba)|(bb))a)))))))))',\n",
+       " 13: '((b((((ab)|(((a)|(b))a))b)|(((((a)|(b))a)|(bb))a)))|(a((((ba))b)|(((ba)|(bb))a))))',\n",
+       " 15: '((a)|(b))',\n",
+       " 17: '((b((a((ba)))|(b((aa)))))|(a((b((ab)|(((a)|(b))a)))|(a((ba)|(ab))))))',\n",
+       " 23: '((((aa)|(ab))a)|(((bb))b))',\n",
+       " 28: '((((((a)|(b))a)|(bb))a))',\n",
+       " 4: '((aa))',\n",
+       " 20: '((bb)|(a((a)|(b))))',\n",
+       " 3: '((((ab)|(((a)|(b))a))b)|(((((a)|(b))a)|(bb))a))',\n",
+       " 27: '((a((bb)|(ab)))|(b((((a)|(b))((a)|(b))))))',\n",
+       " 14: 'b',\n",
+       " 21: '((ba)|(ab))',\n",
+       " 25: '((aa)|(ab))',\n",
+       " 22: '((bb))',\n",
+       " 8: '(((((b((a((bb)|(ab)))|(b((((a)|(b))((a)|(b)))))))|(a((b((bb)))|(a((bb)|(a((a)|(b))))))))b)|(((((((aa)|(ab))a)|(((bb))b))b)|(((((((a)|(b))a)|(bb))a))a))a))+)',\n",
+       " 26: '((b((bb)))|(a((bb)|(a((a)|(b))))))',\n",
+       " 18: '((((a)|(b))((a)|(b))))',\n",
+       " 7: '((b((ab)|(((a)|(b))a)))|(a((ba)|(ab))))',\n",
+       " 24: '((ba))'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 300
+    }
+   ],
+   "source": [
+    "test_input = \"\"\"\n",
+    "    42: 9 14 | 10 1\n",
+    "    9: 14 27 | 1 26\n",
+    "    10: 23 14 | 28 1\n",
+    "    1: \"a\"\n",
+    "    11: 42 31\n",
+    "    5: 1 14 | 15 1\n",
+    "    19: 14 1 | 14 14\n",
+    "    12: 24 14 | 19 1\n",
+    "    16: 15 1 | 14 14\n",
+    "    31: 14 17 | 1 13\n",
+    "    6: 14 14 | 1 14\n",
+    "    2: 1 24 | 14 4\n",
+    "    0: 8 11\n",
+    "    13: 14 3 | 1 12\n",
+    "    15: 1 | 14\n",
+    "    17: 14 2 | 1 7\n",
+    "    23: 25 1 | 22 14\n",
+    "    28: 16 1\n",
+    "    4: 1 1\n",
+    "    20: 14 14 | 1 15\n",
+    "    3: 5 14 | 16 1\n",
+    "    27: 1 6 | 14 18\n",
+    "    14: \"b\"\n",
+    "    21: 14 1 | 1 14\n",
+    "    25: 1 1 | 1 14\n",
+    "    22: 14 14\n",
+    "    8: 42\n",
+    "    26: 14 22 | 1 20\n",
+    "    18: 15 15\n",
+    "    7: 14 5 | 1 21\n",
+    "    24: 14 1\n",
+    "\n",
+    "    abbbbbabbbaaaababbaabbbbabababbbabbbbbbabaaaa\n",
+    "    bbabbbbaabaabba\n",
+    "    babbbbaabbbbbabbbbbbaabaaabaaa\n",
+    "    aaabbbbbbaaaabaababaabababbabaaabbababababaaa\n",
+    "    bbbbbbbaaaabbbbaaabbabaaa\n",
+    "    bbbababbbbaaaaaaaabbababaaababaabab\n",
+    "    ababaaaaaabaaab\n",
+    "    ababaaaaabbbaba\n",
+    "    baabbaaaabbaaaababbaababb\n",
+    "    abbbbabbbbaaaababbbbbbaaaababb\n",
+    "    aaaaabbaabaaaaababaa\n",
+    "    aaaabbaaaabbaaa\n",
+    "    aaaabbaabbaaaaaaabbbabbbaaabbaabaaa\n",
+    "    babaaabbbaaabaababbaabababaaab\n",
+    "    aabbbbbaabbbaaaaaabbbbbababaaaaabbaaabba\n",
+    "\"\"\".strip().splitlines()\n",
+    "\n",
+    "assert num_matching_strings(test_input, special_cases=True) == 12\n",
+    "grammar = parse_grammar(test_input, special_cases=True)\n",
+    "grammar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  210\nPart 2:  422\nWall time: 86 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day19.txt') as f:\n",
+    "    lines = [l.strip() for l in f]\n",
+    "    print('Part 1: ', num_matching_strings(lines))\n",
+    "    print('Part 2: ', num_matching_strings(lines, special_cases=True))"
    ]
   }
  ]
