Finished day 20 pt. 1

--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "import collections\n",
     "from collections import defaultdict, Counter\n",
-    "from dataclasses import dataclass\n",
+    "from dataclasses import dataclass, field\n",
     "import doctest\n",
     "import functools\n",
     "import itertools\n",
@@ -45,8 +45,9 @@
     "import math\n",
     "import re\n",
     "from copy import deepcopy\n",
-    "from utils import product\n",
-    "from enum import Enum"
+    "from enum import Enum\n",
+    "\n",
+    "from utils import product, neighboring_cells"
    ]
   },
   {
@@ -281,7 +282,8 @@
     "    80\n",
     "    \"\"\"\n",
     "    for deltas in itertools.product(*[ds]*len(cell)):\n",
-    "        if all(d == 0 for d in deltas): continue\n",
+    "        if all(d == 0 for d in deltas):\n",
+    "            continue\n",
     "        yield tuple(c+d for c, d in zip(cell, deltas))\n",
     "\n",
     "def parse_state(state_2d, dims=3):\n",
@@ -860,6 +862,542 @@
     "    lines = [l.strip() for l in f]\n",
     "    print('Part 1: ', num_matching_strings(lines))\n",
     "    print('Part 2: ', num_matching_strings(lines, special_cases=True))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 20: Jurassic Jigsaw"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Set\n",
+    "import heapq\n",
+    "\n",
+    "@dataclass(frozen=True, eq=True)\n",
+    "class Tile:\n",
+    "    tile_id: int\n",
+    "    top: str\n",
+    "    bottom: str\n",
+    "    left: str\n",
+    "    right: str\n",
+    "    flipped: bool = False\n",
+    "    rotation: int = 0\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def from_record(record):\n",
+    "        tile_id, tile_map = record.split(':')\n",
+    "        tile_id = int(tile_id.strip().split()[-1])\n",
+    "        rows = tile_map.strip().splitlines()\n",
+    "        top = rows[0]\n",
+    "        bottom = rows[-1]\n",
+    "        left = ''.join(row[0] for row in rows)\n",
+    "        right = ''.join(row[-1] for row in rows)\n",
+    "        return Tile(tile_id, top, bottom, left, right)\n",
+    "\n",
+    "    def edges(self):\n",
+    "        return set([self.top, self.bottom, self.left, self.right])\n",
+    "\n",
+    "    def flip(self):\n",
+    "        return Tile(self.tile_id,\n",
+    "                    self.top[::-1], self.bottom[::-1], self.right, self.left,\n",
+    "                    not self.flipped, self.rotation)\n",
+    "    \n",
+    "    def rotate(self, amount):\n",
+    "        rotation = (self.rotation + amount) % 360\n",
+    "        if amount == 90:\n",
+    "            return Tile(self.tile_id, self.left[::-1], self.right[::-1], self.bottom, self.top, self.flipped, rotation)\n",
+    "        elif amount == 180:\n",
+    "            return Tile(self.tile_id, self.bottom[::-1], self.top[::-1], self.right[::-1], self.left[::-1], self.flipped, rotation)\n",
+    "        elif amount == 270:\n",
+    "            return Tile(self.tile_id, self.right, self.left, self.top[::-1], self.bottom[::-1], self.flipped, rotation)\n",
+    "        else:\n",
+    "            return self\n",
+    "\n",
+    "    def orientations(self):\n",
+    "        for deg in [0, 90, 180, 270]:\n",
+    "            yield self.rotate(deg)\n",
+    "            yield self.flip().rotate(deg)\n",
+    "\n",
+    "    def tile_key(self):\n",
+    "        return (self.tile_id, self.flipped, self.rotation)\n",
+    "\n",
+    "    def fits_left_of(self, tile):\n",
+    "        return self.right == tile.left\n",
+    "\n",
+    "    def fits_above(self, tile):\n",
+    "        return self.bottom == tile.top\n",
+    "\n",
+    "    def __hash__(self):\n",
+    "        return hash(self.tile_key())\n",
+    "\n",
+    "\n",
+    "@dataclass(frozen=True, eq=True)\n",
+    "class Edge:\n",
+    "    position: str\n",
+    "    tile1: Tile\n",
+    "    tile2: Tile\n",
+    "\n",
+    "\n",
+    "@dataclass(eq=True, order=True)\n",
+    "class TileMap:\n",
+    "    tiles: Set[Tile] = field(default_factory=set)\n",
+    "    edges: Set[Edge] = field(default_factory=set)\n",
+    "\n",
+    "    def try_placing(self, tile):\n",
+    "        if not self.tiles:\n",
+    "            yield TileMap(self.tiles | {tile}, self.edges)\n",
+    "\n",
+    "        for other_tile in self.tiles:\n",
+    "            for oriented in tile.orientations():\n",
+    "                oriented_key = oriented.tile_key()\n",
+    "                if oriented.fits_left_of(other_tile):\n",
+    "                    yield self.place_left_of(oriented, other_tile)\n",
+    "                if other_tile.fits_left_of(oriented):\n",
+    "                    yield self.place_left_of(other_tile, oriented)\n",
+    "                if oriented.fits_above(other_tile):\n",
+    "                    yield self.place_above(oriented, other_tile)\n",
+    "                if other_tile.fits_above(oriented):\n",
+    "                    yield self.place_above(other_tile, oriented)\n",
+    "        \n",
+    "    def place_left_of(self, t1, t2):\n",
+    "        return TileMap(self.tiles | {t1, t2},\n",
+    "                       self.edges | {Edge('left', t1, t2)})\n",
+    "\n",
+    "    def place_above(self, t1, t2):\n",
+    "        return TileMap(self.tiles | {t1, t2},\n",
+    "                       self.edges | {Edge('above', t1, t2)})\n",
+    "\n",
+    "    def complete_edges(self):\n",
+    "        edge_completions = defaultdict(lambda: None)\n",
+    "        all_edges = set()\n",
+    "        \n",
+    "        def add_edge(edge):\n",
+    "            if edge in all_edges: return False\n",
+    "            all_edges.add(edge)\n",
+    "            edge_completions[(edge.tile1, edge.position)] = edge.tile2\n",
+    "            edge_completions[(edge.position, edge.tile2)] = edge.tile1\n",
+    "            return False\n",
+    "\n",
+    "        for edge in self.edges:\n",
+    "            add_edge(edge)\n",
+    "        \n",
+    "        while True:\n",
+    "            changed = False\n",
+    "            for edge in list(all_edges):\n",
+    "                changed |= add_edge(edge)\n",
+    "                position, t1, t2 = edge.position, edge.tile1, edge.tile2\n",
+    "                new_edges = []\n",
+    "                if edge.position == 'left':\n",
+    "                    new_edges.append(('left', edge_completions[(t1, 'above')],  edge_completions[(t2, 'above')]))\n",
+    "                    new_edges.append(('left', edge_completions[('above', t1)], edge_completions[('above', t2)]))\n",
+    "                elif edge.position == 'above':\n",
+    "                    new_edges.append(('above', edge_completions[(t1, 'left')],  edge_completions[(t2, 'left')]))\n",
+    "                    new_edges.append(('above', edge_completions[('left', t1)], edge_completions[('left', t2)]))\n",
+    "                for position, t1, t2 in new_edges:\n",
+    "                    if t1 and t2:\n",
+    "                        changed |= add_edge(Edge(position, t1, t2))\n",
+    "            if not changed: break\n",
+    "        return all_edges, edge_completions\n",
+    "\n",
+    "    def is_solved(self, m, n):\n",
+    "        all_edges, _ = self.complete_edges()\n",
+    "        return len(all_edges) == (m * (m - 1) + n * (n - 1))\n",
+    "\n",
+    "    def corners(self):\n",
+    "        all_edges, edge_completions = self.complete_edges()\n",
+    "        tl = tr = bl = br = None\n",
+    "        for t in self.tiles:\n",
+    "            if not edge_completions[('above', t)] and not edge_completions[('left', t)]:\n",
+    "                tl = t\n",
+    "            elif not edge_completions[('above', t)] and not edge_completions[(t, 'left')]:\n",
+    "                tr = t\n",
+    "            elif not edge_completions[(t, 'above')] and not edge_completions[('left', t)]:\n",
+    "                bl = t\n",
+    "            elif not edge_completions[(t, 'above')] and not edge_completions[(t, 'left')]:\n",
+    "                br = t\n",
+    "        return tl, tr, bl, br\n",
+    "\n",
+    "def place_all(tiles, size):\n",
+    "    possibilities = []\n",
+    "    def add_possibility(tile_map, remaining):\n",
+    "        heapq.heappush(possibilities, (len(remaining), tile_map, frozenset(remaining)))\n",
+    "\n",
+    "    initial_tile_map = list(TileMap().try_placing(tiles[0]))[0]\n",
+    "    add_possibility(initial_tile_map, tiles[1:])\n",
+    "\n",
+    "    while possibilities:\n",
+    "        _, tile_map, remaining = heapq.heappop(possibilities)\n",
+    "        if not remaining and tile_map.is_solved(size, size): return tile_map\n",
+    "        for tile in remaining:\n",
+    "            new_remaining = remaining - {tile}\n",
+    "            for new_tile_map in tile_map.try_placing(tile):\n",
+    "                add_possibility(new_tile_map, new_remaining)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_input = \"\"\"\n",
+    "Tile 2311:\n",
+    "..##.#..#.\n",
+    "##..#.....\n",
+    "#...##..#.\n",
+    "####.#...#\n",
+    "##.##.###.\n",
+    "##...#.###\n",
+    ".#.#.#..##\n",
+    "..#....#..\n",
+    "###...#.#.\n",
+    "..###..###\n",
+    "\n",
+    "Tile 1951:\n",
+    "#.##...##.\n",
+    "#.####...#\n",
+    ".....#..##\n",
+    "#...######\n",
+    ".##.#....#\n",
+    ".###.#####\n",
+    "###.##.##.\n",
+    ".###....#.\n",
+    "..#.#..#.#\n",
+    "#...##.#..\n",
+    "\n",
+    "Tile 1171:\n",
+    "####...##.\n",
+    "#..##.#..#\n",
+    "##.#..#.#.\n",
+    ".###.####.\n",
+    "..###.####\n",
+    ".##....##.\n",
+    ".#...####.\n",
+    "#.##.####.\n",
+    "####..#...\n",
+    ".....##...\n",
+    "\n",
+    "Tile 1427:\n",
+    "###.##.#..\n",
+    ".#..#.##..\n",
+    ".#.##.#..#\n",
+    "#.#.#.##.#\n",
+    "....#...##\n",
+    "...##..##.\n",
+    "...#.#####\n",
+    ".#.####.#.\n",
+    "..#..###.#\n",
+    "..##.#..#.\n",
+    "\n",
+    "Tile 1489:\n",
+    "##.#.#....\n",
+    "..##...#..\n",
+    ".##..##...\n",
+    "..#...#...\n",
+    "#####...#.\n",
+    "#..#.#.#.#\n",
+    "...#.#.#..\n",
+    "##.#...##.\n",
+    "..##.##.##\n",
+    "###.##.#..\n",
+    "\n",
+    "Tile 2473:\n",
+    "#....####.\n",
+    "#..#.##...\n",
+    "#.##..#...\n",
+    "######.#.#\n",
+    ".#...#.#.#\n",
+    ".#########\n",
+    ".###.#..#.\n",
+    "########.#\n",
+    "##...##.#.\n",
+    "..###.#.#.\n",
+    "\n",
+    "Tile 2971:\n",
+    "..#.#....#\n",
+    "#...###...\n",
+    "#.#.###...\n",
+    "##.##..#..\n",
+    ".#####..##\n",
+    ".#..####.#\n",
+    "#..#.#..#.\n",
+    "..####.###\n",
+    "..#.#.###.\n",
+    "...#.#.#.#\n",
+    "\n",
+    "Tile 2729:\n",
+    "...#.#.#.#\n",
+    "####.#....\n",
+    "..#.#.....\n",
+    "....#..#.#\n",
+    ".##..##.#.\n",
+    ".#.####...\n",
+    "####.#.#..\n",
+    "##.####...\n",
+    "##..#.##..\n",
+    "#.##...##.\n",
+    "\n",
+    "Tile 3079:\n",
+    "#.#.#####.\n",
+    ".#..######\n",
+    "..#.......\n",
+    "######....\n",
+    "####.#..#.\n",
+    ".#...#.##.\n",
+    "#.#####.##\n",
+    "..#.###...\n",
+    "..#.......\n",
+    "..#.###...\"\"\"\n",
+    "\n",
+    "test_tiles = [Tile.from_record(record) for record in test_input.strip().split('\\n\\n')]\n",
+    "tiles_by_id = {t.tile_id: t for t in test_tiles}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "above 2971 2729\nleft 2729 1427\nabove 1489 1427\nabove 1427 2311\nleft 1951 2311\nleft 1427 2473\nleft 2311 3079\nleft 1489 1171\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution = place_all(test_tiles, 3)\n",
+    "for e in solution.edges:\n",
+    "    print(e.position, e.tile1.tile_id, e.tile2.tile_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_edges, _ = solution.complete_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "above 2729 1951\nabove 1427 2311\nleft 1427 2473\nleft 2311 3079\nleft 2971 1489\nabove 1171 2473\nabove 2971 2729\nleft 2729 1427\nabove 1489 1427\nabove 2473 3079\nleft 1951 2311\nleft 1489 1171\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in final_edges:\n",
+    "    print(e.position, e.tile1.tile_id, e.tile2.tile_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "20899048083289"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 413
+    }
+   ],
+   "source": [
+    "product(t.tile_id for t in solution.corners())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neighboring_cells(cell):\n",
+    "    x, y = cell\n",
+    "    return ((x - 1, y), (x, y - 1), (x + 1, y), (x, y + 1))\n",
+    "\n",
+    "class TileMapV2:\n",
+    "    def __init__(self, tiles=None, cells=None):\n",
+    "        self.tiles = tiles or frozenset()\n",
+    "        self.cells = cells or {}\n",
+    "\n",
+    "    def available_cells(self):\n",
+    "        if not self.cells:\n",
+    "            yield (0, 0)\n",
+    "        else:\n",
+    "            for cell in self.cells:\n",
+    "                for neighbor in neighboring_cells(cell):\n",
+    "                    if not self.cells.get(neighbor):\n",
+    "                        yield neighbor\n",
+    "            \n",
+    "    def neighboring_tiles(self, cell):\n",
+    "        return [self.cells.get(neighbor) for neighbor in neighboring_cells(cell)]\n",
+    "\n",
+    "    def fits(self, tile, cell):\n",
+    "        neighbors = self.neighboring_tiles(cell)\n",
+    "        left_tile, above_tile, right_tile, below_tile = neighbors\n",
+    "        return ((not left_tile or left_tile.fits_left_of(tile)) and\n",
+    "                (not right_tile or tile.fits_left_of(right_tile)) and\n",
+    "                (not above_tile or above_tile.fits_above(tile)) and\n",
+    "                (not below_tile or tile.fits_above(below_tile)))\n",
+    "\n",
+    "    def place(self, tile, cell):\n",
+    "        new_cells = dict(self.cells)\n",
+    "        new_cells[cell] = tile\n",
+    "        return TileMapV2(self.tiles | {tile}, new_cells)\n",
+    "\n",
+    "    def bounds(self):\n",
+    "        x_lo = min(self.cells, key=lambda xy: xy[0])[0]\n",
+    "        x_hi = max(self.cells, key=lambda xy: xy[0])[0]\n",
+    "        y_lo = min(self.cells, key=lambda xy: xy[1])[1]\n",
+    "        y_hi = max(self.cells, key=lambda xy: xy[1])[1]\n",
+    "        return x_lo, x_hi, y_lo, y_hi\n",
+    "\n",
+    "    def size(self):\n",
+    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
+    "        return x_hi - x_lo + 1, y_hi - y_lo + 1\n",
+    "\n",
+    "    def is_filled(self):\n",
+    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
+    "        for x in range(x_lo, x_hi+1):\n",
+    "            for y in range(y_lo, y_hi+1):\n",
+    "                if not self.cells.get((x, y)):\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    def corners(self):\n",
+    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
+    "        return [self.cells[(x_lo, y_lo)],\n",
+    "                self.cells[(x_hi, y_lo)],\n",
+    "                self.cells[(x_lo, y_hi)],\n",
+    "                self.cells[(x_hi, y_hi)]]\n",
+    "\n",
+    "    def print(self):\n",
+    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
+    "        for y in range(y_lo, y_hi+1):\n",
+    "            for x in range(x_lo, x_hi+1):\n",
+    "                print(f'{self.cells[(x,y)].tile_id if (x,y) in self.cells else \".\":<6}', end='')\n",
+    "            print()\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        return len(self.tiles) < len(other.tiles)\n",
+    "\n",
+    "\n",
+    "def place_one(tile_map, tile):\n",
+    "    orientations = list(tile.orientations()) if tile_map.tiles else [tile]\n",
+    "    for cell in tile_map.available_cells():\n",
+    "        for tile in orientations:\n",
+    "            if tile_map.fits(tile, cell):\n",
+    "                yield cell, tile_map.place(tile, cell)\n",
+    "\n",
+    "\n",
+    "def place_all(tiles, size):\n",
+    "    possibilities = []\n",
+    "    def add_possibility(tile_map, remaining, cell):\n",
+    "        p1 = len(remaining)\n",
+    "        p2 = -sum(t is not None for t in tile_map.neighboring_tiles(cell))\n",
+    "        heapq.heappush(possibilities, ((p1, p2), tile_map, remaining))\n",
+    "\n",
+    "    def get_possibility():\n",
+    "        return heapq.heappop(possibilities)[1:]\n",
+    "\n",
+    "    for cell, tile_map in place_one(TileMapV2(), tiles[0]):\n",
+    "        add_possibility(tile_map, frozenset(tiles[1:]), cell)\n",
+    "\n",
+    "    while possibilities:\n",
+    "        tile_map, remaining = get_possibility()\n",
+    "        if not remaining and tile_map.is_filled(): return tile_map\n",
+    "        for tile in remaining:\n",
+    "            new_remaining = remaining - {tile}\n",
+    "            for cell, new_tile_map in place_one(tile_map, tile):\n",
+    "                if all(dim <= size for dim in new_tile_map.size()):\n",
+    "                    add_possibility(new_tile_map, new_remaining, cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "placing 1951\n1951  \n\nplacing 2311\n1951  2311  \n\nplacing 3079\n1951  2311  3079  \n\nplacing 2729\n2729  .     .     \n1951  2311  3079  \n\nplacing 1427\n2729  1427  .     \n1951  2311  3079  \n\n2729  1427  .     \n1951  2311  3079  \n\n"
+     ]
+    }
+   ],
+   "source": [
+    "tile_map = TileMapV2()\n",
+    "for tile_id in [1951, 2311, 3079, 2729, 1427]:\n",
+    "    print('placing', tile_id)\n",
+    "    for cell, tile_map in place_one(tile_map, tiles_by_id[tile_id]):\n",
+    "        tile_map.print()\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2971  1489  1171  \n2729  1427  2473  \n1951  2311  3079  \n"
+     ]
+    }
+   ],
+   "source": [
+    "tile_map = place_all(test_tiles, 3)\n",
+    "tile_map.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  16192267830719\nWall time: 6.09 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day20.txt') as f:\n",
+    "    tiles = [Tile.from_record(record) for record in f.read().strip().split('\\n\\n')]\n",
+    "    solution = place_all(tiles, 12)\n",
+    "    print('Part 1: ', product(t.tile_id for t in solution.corners()))"
    ]
   }
  ]
